--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/22.normal-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/22.normal-of-mysql-mode.md
@@ -19,24 +19,24 @@ NORMAL(<mean> , <stddev> , <gen>)
 
 ## 示例
 
-如下示例为对 100 万个符合正态分布的随机数值进行取值，只保留小数点后一位，并统计数量。
+如下示例为对 100 万个符合正态分布的随机数值进行取值（只保留小数点后一位），并统计数量。
 
 ```shell
 obclient> SELECT v, COUNT(*) FROM (SELECT ROUND(NORMAL(3, 0.1, RANDOM()), 1) v FROM TABLE(GENERATOR(1000000))) x GROUP BY v ORDER BY v;
 +------+----------+
-| V    | COUNT(*) |
+| v    | COUNT(*) |
 +------+----------+
 |  2.5 |        4 |
-|  2.6 |      237 |
-|  2.7 |     6053 |
-|  2.8 |    60273 |
-|  2.9 |   241467 |
-|    3 |   383862 |
-|  3.1 |   241592 |
-|  3.2 |    60447 |
-|  3.3 |     5837 |
-|  3.4 |      224 |
-|  3.5 |        4 |
+|  2.6 |      238 |
+|  2.7 |     5979 |
+|  2.8 |    60889 |
+|  2.9 |   241991 |
+|  3.0 |   382951 |
+|  3.1 |   241306 |
+|  3.2 |    60533 |
+|  3.3 |     5861 |
+|  3.4 |      243 |
+|  3.5 |        5 |
 +------+----------+
 11 rows in set 
 ```
