--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/29.randstr-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/29.randstr-of-mysql-mode.md
@@ -38,7 +38,7 @@ RANDSTR(N, gen)
 ```shell
 obclient> SELECT RANDSTR(10, RANDOM()) FROM TABLE(GENERATOR(7));
 +-----------------------+
-| randstr(10, random()) |
+| RANDSTR(10, RANDOM()) |
 +-----------------------+
 | TGfdBAZ1BP            |
 | VvMbD2bChR            |
@@ -56,20 +56,20 @@ obclient> SELECT RANDSTR(10, RANDOM()) FROM TABLE(GENERATOR(7));
 ```shell
 obclient> SELECT RANDSTR(1, ZIPF(1, 10, RANDOM())) s, COUNT(*) FROM TABLE(GENERATOR(1000)) GROUP BY s ORDER BY 1 ASC;
 +------+----------+
-| s    | count(*) |
+| s    | COUNT(*) |
 +------+----------+
-| A    |      331 |
-| B    |      173 |
-| C    |      119 |
-| D    |       88 |
-| E    |       74 |
-| F    |       60 |
-| G    |       50 |
-| H    |       44 |
-| I    |       30 |
-| J    |       31 |
+| 0    |       27 |
+| 1    |       41 |
+| 4    |       32 |
+| 5    |       54 |
+| 8    |       64 |
+| 9    |       69 |
+| C    |       88 |
+| D    |      125 |
+| G    |      168 |
+| H    |      332 |
 +------+----------+
-10 rows in set 
+10 rows in set
 ```
 
 `RANDSTR()` 函数通过控制 `N` 参数的大小，可以生成长度不同的字符串，如下例所示。
@@ -77,7 +77,7 @@ obclient> SELECT RANDSTR(1, ZIPF(1, 10, RANDOM())) s, COUNT(*) FROM TABLE(GENERA
 ```shell
 obclient> SELECT RANDSTR(5, 40) FROM DUAL;
 +----------------+
-| randstr(5, 40) |
+| RANDSTR(5, 40) |
 +----------------+
 | UU3g0          |
 +----------------+
@@ -85,7 +85,7 @@ obclient> SELECT RANDSTR(5, 40) FROM DUAL;
 
 obclient> SELECT RANDSTR(1, 40) FROM DUAL;
 +----------------+
-| randstr(1, 40) |
+| RANDSTR(1, 40) |
 +----------------+
 | U              |
 +----------------+
@@ -93,7 +93,7 @@ obclient> SELECT RANDSTR(1, 40) FROM DUAL;
 
 obclient> SELECT RANDSTR(0, 40) FROM DUAL;
 +----------------+
-| randstr(0, 40) |
+| RANDSTR(0, 40) |
 +----------------+
 |                |
 +----------------+
@@ -101,7 +101,7 @@ obclient> SELECT RANDSTR(0, 40) FROM DUAL;
 
 obclient> SELECT RANDSTR(-1, 40) FROM DUAL;
 +-----------------+
-| randstr(-1, 40) |
+| RANDSTR(-1, 40) |
 +-----------------+
 | NULL            |
 +-----------------+
@@ -113,7 +113,7 @@ obclient> SELECT RANDSTR(-1, 40) FROM DUAL;
 ```shell
 obclient> SELECT RANDSTR(10, 1442) FROM TABLE(GENERATOR(7));
 +-------------------+
-| randstr(10, 1442) |
+| RANDSTR(10, 1442) |
 +-------------------+
 | 4dTm5bOtGc        |
 | 4dTm5bOtGc        |
@@ -127,7 +127,7 @@ obclient> SELECT RANDSTR(10, 1442) FROM TABLE(GENERATOR(7));
 
 obclient> SELECT RANDSTR(10, 1442) FROM TABLE(GENERATOR(7));
 +-------------------+
-| randstr(10, 1442) |
+| RANDSTR(10, 1442) |
 +-------------------+
 | 4dTm5bOtGc        |
 | 4dTm5bOtGc        |
