--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/40.uniform-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/40.uniform-of-mysql-mode.md
@@ -37,28 +37,28 @@ obclient> SELECT v, COUNT(*) FROM (SELECT UNIFORM(1, 10, RANDOM()) v FROM TABLE(
 10 rows in set 
 ```
 
-如下示例说明返回的结果类型和参数 `a`、`b` 的类型有关。
+如下示例说明返回的结果类型和参数的类型有关。
 
 ```shell
 obclient> SELECT UNIFORM(0.0, 10, RANDOM()) FROM TABLE(GENERATOR(4)) ORDER BY 1;
 +----------------------------+
-| uniform(0.0, 10, random()) |
+| UNIFORM(0.0, 10, RANDOM()) |
 +----------------------------+
-|        0.16390866337439913 |
-|           0.61239955093896 |
-|          5.975287116291338 |
-|          7.934667552464353 |
+|         2.3520877625884653 |
+|          4.155845987385725 |
+|          8.323930497420852 |
+|          9.844002748532109 |
 +----------------------------+
 4 rows in set 
 
 obclient> SELECT UNIFORM(0, 10, RANDOM()) FROM TABLE(GENERATOR(4)) ORDER BY 1;
 +--------------------------+
-| uniform(0, 10, random()) |
+| UNIFORM(0, 10, RANDOM()) |
 +--------------------------+
-|                        1 |
+|                        0 |
 |                        4 |
-|                        7 |
 |                        8 |
+|                        9 |
 +--------------------------+
-4 rows in set 
+4 rows in set
 ```
