--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/50.zipf-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/50.zipf-of-mysql-mode.md
@@ -22,37 +22,37 @@ ZIPF(<s> , <N> , <gen>)
 ```shell
 obclient> SELECT ZIPF(1, 10, RANDOM()) FROM TABLE(GENERATOR(6));
 +-----------------------+
-| zipf(1, 10, random()) |
+| ZIPF(1, 10, RANDOM()) |
 +-----------------------+
+|                     4 |
+|                     5 |
 |                     2 |
+|                     1 |
 |                     0 |
-|                     0 |
-|                     0 |
-|                     3 |
-|                     3 |
+|                     2 |
 +-----------------------+
 6 rows in set 
 
 obclient> SELECT ZIPF(1, 10, 0415) FROM TABLE(GENERATOR(6));
 +-------------------+
-| zipf(1, 10, 0415) |
+| ZIPF(1, 10, 0415) |
 +-------------------+
-|                 1 |
-|                 1 |
-|                 1 |
-|                 1 |
-|                 1 |
-|                 1 |
+|                 8 |
+|                 8 |
+|                 8 |
+|                 8 |
+|                 8 |
+|                 8 |
 +-------------------+
 6 rows in set 
 
 obclient> SELECT ZIPF(ABS(-1), 23, RANDOM()) FROM DUAL;
 +-----------------------------+
-| zipf(abs(-1), 23, random()) |
+| ZIPF(ABS(-1), 23, RANDOM()) |
 +-----------------------------+
-|                           9 |
+|                           1 |
 +-----------------------------+
-1 row in set 
+1 row in set
 ```
 
 `ZIPF()` 函数的 `s` 取值对分布存在影响，示例如下。
@@ -60,81 +60,82 @@ obclient> SELECT ZIPF(ABS(-1), 23, RANDOM()) FROM DUAL;
 ```shell
 obclient> SELECT  COUNT(*), ZIPF(1, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
 +----------+------+
-| count(*) | v    |
+| COUNT(*) | v    |
 +----------+------+
-|      372 |    9 |
-|      395 |    8 |
-|      411 |    7 |
-|      456 |    6 |
-|      566 |    5 |
-|      662 |    4 |
-|      862 |    3 |
-|     1162 |    2 |
-|     1694 |    1 |
-|     3420 |    0 |
+|      350 |    9 |
+|      369 |    8 |
+|      450 |    7 |
+|      488 |    6 |
+|      559 |    5 |
+|      727 |    4 |
+|      877 |    3 |
+|     1100 |    2 |
+|     1755 |    1 |
+|     3325 |    0 |
 +----------+------+
 10 rows in set 
 
 obclient> SELECT COUNT(*), ZIPF(2, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
 +----------+------+
-| count(*) | v    |
+| COUNT(*) | v    |
 +----------+------+
-|       63 |    9 |
-|       89 |    8 |
-|      104 |    7 |
-|      120 |    6 |
-|      177 |    5 |
-|      237 |    4 |
-|      411 |    3 |
-|      717 |    2 |
-|     1601 |    1 |
-|     6481 |    0 |
+|       69 |    9 |
+|       73 |    8 |
+|      102 |    7 |
+|      118 |    6 |
+|      187 |    5 |
+|      260 |    4 |
+|      419 |    3 |
+|      679 |    2 |
+|     1632 |    1 |
+|     6461 |    0 |
 +----------+------+
 10 rows in set 
 
 obclient> SELECT COUNT(*), ZIPF(3, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
 +----------+------+
-| count(*) | v    |
+| COUNT(*) | v    |
 +----------+------+
-|        7 |    9 |
+|        6 |    9 |
 |       12 |    8 |
-|       18 |    7 |
-|       29 |    6 |
-|       49 |    5 |
-|       67 |    4 |
+|       15 |    7 |
+|       35 |    5 |
+|       40 |    6 |
+|       77 |    4 |
 |      118 |    3 |
-|      339 |    2 |
-|     1006 |    1 |
-|     8355 |    0 |
+|      292 |    2 |
+|     1106 |    1 |
+|     8299 |    0 |
 +----------+------+
 10 rows in set 
 
 obclient> SELECT COUNT(*), ZIPF(4, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
 +----------+------+
-| count(*) | v    |
+| COUNT(*) | v    |
 +----------+------+
-|        2 |    8 |
-|        5 |    6 |
-|        5 |    7 |
-|       11 |    5 |
-|       18 |    4 |
-|       48 |    3 |
-|       96 |    2 |
-|      592 |    1 |
-|     9223 |    0 |
+|        1 |    8 |
+|        1 |    7 |
+|        1 |    9 |
+|        2 |    5 |
+|        6 |    6 |
+|       19 |    4 |
+|       35 |    3 |
+|      120 |    2 |
+|      548 |    1 |
+|     9267 |    0 |
 +----------+------+
-9 rows in set 
+10 rows in set 
 
 obclient> SELECT COUNT(*), ZIPF(5, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
 +----------+------+
-| count(*) | v    |
+| COUNT(*) | v    |
 +----------+------+
-|        1 |    4 |
 |        2 |    5 |
-|       10 |    3 |
-|       45 |    2 |
-|      288 |    1 |
-|     9654 |    0 |
+|        3 |    4 |
+|       18 |    3 |
+|       31 |    2 |
+|      309 |    1 |
+|     9637 |    0 |
 +----------+------+
 6 rows in set 
 ```
