--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/12.generator-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/12.generator-of-oracle-mode.md
@@ -59,7 +59,7 @@ obclient> SELECT RANDSTR(1, ZIPF(1, 5, RANDOM())) str FROM TABLE(GENERATOR(5));
 `GENERATOR()` 函数也可以和其它表做 Join，示例如下：
 
 ```shell
-obclient> CREATE TABLE t1 (c1 BIGINT);
+obclient> CREATE TABLE t1 (c1 INT);
 Query OK, 0 rows affected 
 
 obclient> INSERT INTO t1 VALUES (1), (2);
@@ -80,29 +80,29 @@ obclient> SELECT c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
 6 rows in set
 
 obclient> EXPLAIN SELECT c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
-+--------------------------------------------------------------------+
-| Query Plan                                                         |
-+--------------------------------------------------------------------+
-| ================================================================== |
-| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)| |
-| ------------------------------------------------------------------ |
-| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |14          | |
-| |1 | FUNCTION_TABLE            |FUNC_TABLE1|199     |1           | |
-| |2 | MATERIAL                  |           |2       |2           | |
-| |3 |  TABLE SCAN               |t1         |2       |2           | |
-| ================================================================== |
-| Outputs & filters:                                                 |
-| -------------------------------------                              |
-|   0 - output([t1.c1], [random(1)]), filter(nil), rowset=256        |
-|       conds(nil), nl_params_(nil), batch_join=false                |
-|   1 - output(nil), filter(nil)                                     |
-|       value(generator(3))                                          |
-|   2 - output([t1.c1]), filter(nil), rowset=256                     |
-|   3 - output([t1.c1]), filter(nil), rowset=256                     |
-|       access([t1.c1]), partitions(p0)                              |
-|       is_index_back=false, is_global_index=false,                  |
-|       range_key([t1.__pk_increment]), range(MIN ; MAX)always true  |
-+--------------------------------------------------------------------+
++----------------------------------------------------------------------------------+
+| Query Plan                                                                       |
++----------------------------------------------------------------------------------+
+| ==================================================================               |
+| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)|               |
+| ------------------------------------------------------------------               |
+| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |14          |               |
+| |1 |├─FUNCTION_TABLE           |FUNC_TABLE1|199     |1           |               |
+| |2 |└─MATERIAL                 |           |2       |2           |               |
+| |3 |  └─TABLE FULL SCAN        |T1         |2       |2           |               |
+| ==================================================================               |
+| Outputs & filters:                                                               |
+| -------------------------------------                                            |
+|   0 - output([T1.C1], [RANDOM(cast(1, BIGINT(-1, 0)))]), filter(nil), rowset=256 |
+|       conds(nil), nl_params_(nil), use_batch=false                               |
+|   1 - output(nil), filter(nil)                                                   |
+|       value(GENERATOR(cast(3, BIGINT(-1, 0))))                                   |
+|   2 - output([T1.C1]), filter(nil), rowset=256                                   |
+|   3 - output([T1.C1]), filter(nil), rowset=256                                   |
+|       access([T1.C1]), partitions(p0)                                            |
+|       is_index_back=false, is_global_index=false,                                |
+|       range_key([T1.__pk_increment]), range(MIN ; MAX)always true                |
++----------------------------------------------------------------------------------+
 19 rows in set 
 
 obclient> SELECT /*+ PARALLEL(2) */ c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
@@ -119,35 +119,35 @@ obclient> SELECT /*+ PARALLEL(2) */ c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
 6 rows in set 
 
 obclient> EXPLAIN SELECT /*+ PARALLEL(2) */ c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
-+--------------------------------------------------------------------+
-| Query Plan                                                         |
-+--------------------------------------------------------------------+
-| ================================================================== |
-| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)| |
-| ------------------------------------------------------------------ |
-| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |14          | |
-| |1 | FUNCTION_TABLE            |FUNC_TABLE1|199     |1           | |
-| |2 | MATERIAL                  |           |2       |2           | |
-| |3 |  PX COORDINATOR           |           |2       |2           | |
-| |4 |   EXCHANGE OUT DISTR      |:EX10000   |2       |2           | |
-| |5 |    PX BLOCK ITERATOR      |           |2       |1           | |
-| |6 |     TABLE SCAN            |t1         |2       |1           | |
-| ================================================================== |
-| Outputs & filters:                                                 |
-| -------------------------------------                              |
-|   0 - output([t1.c1], [random(1)]), filter(nil), rowset=256        |
-|       conds(nil), nl_params_(nil), batch_join=false                |
-|   1 - output(nil), filter(nil)                                     |
-|       value(generator(3))                                          |
-|   2 - output([t1.c1]), filter(nil), rowset=256                     |
-|   3 - output([t1.c1]), filter(nil), rowset=256                     |
-|   4 - output([t1.c1]), filter(nil), rowset=256                     |
-|       dop=2                                                        |
-|   5 - output([t1.c1]), filter(nil), rowset=256                     |
-|   6 - output([t1.c1]), filter(nil), rowset=256                     |
-|       access([t1.c1]), partitions(p0)                              |
-|       is_index_back=false, is_global_index=false,                  |
-|       range_key([t1.__pk_increment]), range(MIN ; MAX)always true  |
-+--------------------------------------------------------------------+
-26 rows in set 
++----------------------------------------------------------------------------------+
+| Query Plan                                                                       |
++----------------------------------------------------------------------------------+
+| ==================================================================               |
+| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)|               |
+| ------------------------------------------------------------------               |
+| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |13          |               |
+| |1 |├─FUNCTION_TABLE           |FUNC_TABLE1|199     |1           |               |
+| |2 |└─MATERIAL                 |           |2       |3           |               |
+| |3 |  └─PX COORDINATOR         |           |2       |3           |               |
+| |4 |    └─EXCHANGE OUT DISTR   |:EX10000   |2       |2           |               |
+| |5 |      └─PX BLOCK ITERATOR  |           |2       |1           |               |
+| |6 |        └─TABLE FULL SCAN  |T1         |2       |1           |               |
+| ==================================================================               |
+| Outputs & filters:                                                               |
+| -------------------------------------                                            |
+|   0 - output([T1.C1], [RANDOM(cast(1, BIGINT(-1, 0)))]), filter(nil), rowset=256 |
+|       conds(nil), nl_params_(nil), use_batch=false                               |
+|   1 - output(nil), filter(nil)                                                   |
+|       value(GENERATOR(cast(3, BIGINT(-1, 0))))                                   |
+|   2 - output([T1.C1]), filter(nil), rowset=256                                   |
+|   3 - output([T1.C1]), filter(nil), rowset=256                                   |
+|   4 - output([T1.C1]), filter(nil), rowset=256                                   |
+|       dop=2                                                                      |
+|   5 - output([T1.C1]), filter(nil), rowset=256                                   |
+|   6 - output([T1.C1]), filter(nil), rowset=256                                   |
+|       access([T1.C1]), partitions(p0)                                            |
+|       is_index_back=false, is_global_index=false,                                |
+|       range_key([T1.__pk_increment]), range(MIN ; MAX)always true                |
++----------------------------------------------------------------------------------+
+26 rows in set
 ```
