--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/40.uniform-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/40.uniform-of-oracle-mode.md
@@ -16,49 +16,28 @@ UNIFORM(<min> , <max> , <gen>)
 
 ## 示例
 
-如下示例为均匀生成 1~10 之间的整数。
-
-```shell
-obclient> SELECT v, COUNT(*) FROM (SELECT UNIFORM(1, 10, RANDOM()) v FROM TABLE(GENERATOR(1000000))) x GROUP BY v ORDER BY v;
-+------+----------+
-| v    | count(*) |
-+------+----------+
-|    1 |   100738 |
-|    2 |   100119 |
-|    3 |   100223 |
-|    4 |    99537 |
-|    5 |   100125 |
-|    6 |   100001 |
-|    7 |   100275 |
-|    8 |    99235 |
-|    9 |    99837 |
-|   10 |    99910 |
-+------+----------+
-10 rows in set 
-```
-
-如下示例说明返回的结果类型和参数 `a`、`b` 的类型有关。
+如下示例说明返回的结果类型和 `UNIFORM()` 参数的类型有关。
 
 ```shell
 obclient> SELECT UNIFORM(0.0, 10, RANDOM()) FROM TABLE(GENERATOR(4)) ORDER BY 1;
-+----------------------------+
-| uniform(0.0, 10, random()) |
-+----------------------------+
-|        0.16390866337439913 |
-|           0.61239955093896 |
-|          5.975287116291338 |
-|          7.934667552464353 |
-+----------------------------+
-4 rows in set 
++--------------------------+
+| UNIFORM(0.0,10,RANDOM()) |
++--------------------------+
+|        .8657087411722835 |
+|       1.0922542185892958 |
+|       1.1803956370514672 |
+|        5.613282729140028 |
++--------------------------+
+4 rows in set
 
 obclient> SELECT UNIFORM(0, 10, RANDOM()) FROM TABLE(GENERATOR(4)) ORDER BY 1;
-+--------------------------+
-| uniform(0, 10, random()) |
-+--------------------------+
-|                        1 |
-|                        4 |
-|                        7 |
-|                        8 |
-+--------------------------+
-4 rows in set 
++------------------------+
+| UNIFORM(0,10,RANDOM()) |
++------------------------+
+|     2.6761305377880125 |
+|     3.0277418674828116 |
+|      5.170644071608517 |
+|      5.805950943815582 |
++------------------------+
+4 rows in set
 ```
