--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/50.zipf-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/50.zipf-of-oracle-mode.md
@@ -22,7 +22,7 @@ ZIPF(<s> , <N> , <gen>)
 ```shell
 obclient> SELECT ZIPF(1, 10, RANDOM()) FROM TABLE(GENERATOR(6));
 +-----------------------+
-| zipf(1, 10, random()) |
+|  ZIPF(1,10,RANDOM())  |
 +-----------------------+
 |                     2 |
 |                     0 |
@@ -35,7 +35,7 @@ obclient> SELECT ZIPF(1, 10, RANDOM()) FROM TABLE(GENERATOR(6));
 
 obclient> SELECT ZIPF(1, 10, 0415) FROM TABLE(GENERATOR(6));
 +-------------------+
-| zipf(1, 10, 0415) |
+| ZIPF(1, 10, 0415) |
 +-------------------+
 |                 1 |
 |                 1 |
@@ -48,93 +48,9 @@ obclient> SELECT ZIPF(1, 10, 0415) FROM TABLE(GENERATOR(6));
 
 obclient> SELECT ZIPF(ABS(-1), 23, RANDOM()) FROM DUAL;
 +-----------------------------+
-| zipf(abs(-1), 23, random()) |
+| ZIPF(ABS(-1),23,RANDOM()) |
 +-----------------------------+
 |                           9 |
 +-----------------------------+
 1 row in set 
-```
-
-`ZIPF()` 函数的 `s` 取值对分布存在影响，示例如下。
-
-```shell
-obclient> SELECT  COUNT(*), ZIPF(1, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
-+----------+------+
-| count(*) | v    |
-+----------+------+
-|      372 |    9 |
-|      395 |    8 |
-|      411 |    7 |
-|      456 |    6 |
-|      566 |    5 |
-|      662 |    4 |
-|      862 |    3 |
-|     1162 |    2 |
-|     1694 |    1 |
-|     3420 |    0 |
-+----------+------+
-10 rows in set 
-
-obclient> SELECT COUNT(*), ZIPF(2, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
-+----------+------+
-| count(*) | v    |
-+----------+------+
-|       63 |    9 |
-|       89 |    8 |
-|      104 |    7 |
-|      120 |    6 |
-|      177 |    5 |
-|      237 |    4 |
-|      411 |    3 |
-|      717 |    2 |
-|     1601 |    1 |
-|     6481 |    0 |
-+----------+------+
-10 rows in set 
-
-obclient> SELECT COUNT(*), ZIPF(3, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
-+----------+------+
-| count(*) | v    |
-+----------+------+
-|        7 |    9 |
-|       12 |    8 |
-|       18 |    7 |
-|       29 |    6 |
-|       49 |    5 |
-|       67 |    4 |
-|      118 |    3 |
-|      339 |    2 |
-|     1006 |    1 |
-|     8355 |    0 |
-+----------+------+
-10 rows in set 
-
-obclient> SELECT COUNT(*), ZIPF(4, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
-+----------+------+
-| count(*) | v    |
-+----------+------+
-|        2 |    8 |
-|        5 |    6 |
-|        5 |    7 |
-|       11 |    5 |
-|       18 |    4 |
-|       48 |    3 |
-|       96 |    2 |
-|      592 |    1 |
-|     9223 |    0 |
-+----------+------+
-9 rows in set 
-
-obclient> SELECT COUNT(*), ZIPF(5, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
-+----------+------+
-| count(*) | v    |
-+----------+------+
-|        1 |    4 |
-|        2 |    5 |
-|       10 |    3 |
-|       45 |    2 |
-|      288 |    1 |
-|     9654 |    0 |
-+----------+------+
-6 rows in set 
 ```
