--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/16.generator-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/16.generator-of-mysql-mode.md
@@ -80,29 +80,29 @@ obclient> SELECT c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
 6 rows in set
 
 obclient> EXPLAIN SELECT c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
-+--------------------------------------------------------------------+
-| Query Plan                                                         |
-+--------------------------------------------------------------------+
-| ================================================================== |
-| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)| |
-| ------------------------------------------------------------------ |
-| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |14          | |
-| |1 | FUNCTION_TABLE            |FUNC_TABLE1|199     |1           | |
-| |2 | MATERIAL                  |           |2       |2           | |
-| |3 |  TABLE SCAN               |t1         |2       |2           | |
-| ================================================================== |
-| Outputs & filters:                                                 |
-| -------------------------------------                              |
-|   0 - output([t1.c1], [random(1)]), filter(nil), rowset=256        |
-|       conds(nil), nl_params_(nil), batch_join=false                |
-|   1 - output(nil), filter(nil)                                     |
-|       value(generator(3))                                          |
-|   2 - output([t1.c1]), filter(nil), rowset=256                     |
-|   3 - output([t1.c1]), filter(nil), rowset=256                     |
-|       access([t1.c1]), partitions(p0)                              |
-|       is_index_back=false, is_global_index=false,                  |
-|       range_key([t1.__pk_increment]), range(MIN ; MAX)always true  |
-+--------------------------------------------------------------------+
++------------------------------------------------------------------------+
+| Query Plan                                                             |
++------------------------------------------------------------------------+
+| ==================================================================     |
+| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)|     |
+| ------------------------------------------------------------------     |
+| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |14          |     |
+| |1 |├─FUNCTION_TABLE           |FUNC_TABLE1|199     |1           |     |
+| |2 |└─MATERIAL                 |           |2       |2           |     |
+| |3 |  └─TABLE FULL SCAN        |t1         |2       |2           |     |
+| ==================================================================     |
+| Outputs & filters:                                                     |
+| -------------------------------------                                  |
+|   0 - output([t1.c1], [RANDOM(1)]), filter(nil), rowset=256            |
+|       conds(nil), nl_params_(nil), use_batch=false                     |
+|   1 - output(nil), filter(nil)                                         |
+|       value(GENERATOR(3))                                              |
+|   2 - output([t1.c1]), filter(nil), rowset=256                         |
+|   3 - output([t1.c1]), filter(nil), rowset=256                         |
+|       access([t1.c1]), partitions(p0)                                  |
+|       is_index_back=false, is_global_index=false,                      |
+|       range_key([t1.__pk_increment]), range(MIN ; MAX)always true      |
++------------------------------------------------------------------------+
 19 rows in set 
 
 obclient> SELECT /*+ PARALLEL(2) */ c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
@@ -119,35 +119,35 @@ obclient> SELECT /*+ PARALLEL(2) */ c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
 6 rows in set 
 
 obclient> EXPLAIN SELECT /*+ PARALLEL(2) */ c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
-+--------------------------------------------------------------------+
-| Query Plan                                                         |
-+--------------------------------------------------------------------+
-| ================================================================== |
-| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)| |
-| ------------------------------------------------------------------ |
-| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |14          | |
-| |1 | FUNCTION_TABLE            |FUNC_TABLE1|199     |1           | |
-| |2 | MATERIAL                  |           |2       |2           | |
-| |3 |  PX COORDINATOR           |           |2       |2           | |
-| |4 |   EXCHANGE OUT DISTR      |:EX10000   |2       |2           | |
-| |5 |    PX BLOCK ITERATOR      |           |2       |1           | |
-| |6 |     TABLE SCAN            |t1         |2       |1           | |
-| ================================================================== |
-| Outputs & filters:                                                 |
-| -------------------------------------                              |
-|   0 - output([t1.c1], [random(1)]), filter(nil), rowset=256        |
-|       conds(nil), nl_params_(nil), batch_join=false                |
-|   1 - output(nil), filter(nil)                                     |
-|       value(generator(3))                                          |
-|   2 - output([t1.c1]), filter(nil), rowset=256                     |
-|   3 - output([t1.c1]), filter(nil), rowset=256                     |
-|   4 - output([t1.c1]), filter(nil), rowset=256                     |
-|       dop=2                                                        |
-|   5 - output([t1.c1]), filter(nil), rowset=256                     |
-|   6 - output([t1.c1]), filter(nil), rowset=256                     |
-|       access([t1.c1]), partitions(p0)                              |
-|       is_index_back=false, is_global_index=false,                  |
-|       range_key([t1.__pk_increment]), range(MIN ; MAX)always true  |
-+--------------------------------------------------------------------+
-26 rows in set 
++------------------------------------------------------------------------+
+| Query Plan                                                             |
++------------------------------------------------------------------------+
+| ==================================================================     |
+| |ID|OPERATOR                   |NAME       |EST.ROWS|EST.TIME(us)|     |
+| ------------------------------------------------------------------     |
+| |0 |NESTED-LOOP JOIN CARTESIAN |           |398     |13          |     |
+| |1 |├─FUNCTION_TABLE           |FUNC_TABLE1|199     |1           |     |
+| |2 |└─MATERIAL                 |           |2       |2           |     |
+| |3 |  └─PX COORDINATOR         |           |2       |2           |     |
+| |4 |    └─EXCHANGE OUT DISTR   |:EX10000   |2       |2           |     |
+| |5 |      └─PX BLOCK ITERATOR  |           |2       |1           |     |
+| |6 |        └─TABLE FULL SCAN  |t1         |2       |1           |     |
+| ==================================================================     |
+| Outputs & filters:                                                     |
+| -------------------------------------                                  |
+|   0 - output([t1.c1], [RANDOM(1)]), filter(nil), rowset=256            |
+|       conds(nil), nl_params_(nil), use_batch=false                     |
+|   1 - output(nil), filter(nil)                                         |
+|       value(GENERATOR(3))                                              |
+|   2 - output([t1.c1]), filter(nil), rowset=256                         |
+|   3 - output([t1.c1]), filter(nil), rowset=256                         |
+|   4 - output([t1.c1]), filter(nil), rowset=256                         |
+|       dop=2                                                            |
+|   5 - output([t1.c1]), filter(nil), rowset=256                         |
+|   6 - output([t1.c1]), filter(nil), rowset=256                         |
+|       access([t1.c1]), partitions(p0)                                  |
+|       is_index_back=false, is_global_index=false,                      |
+|       range_key([t1.__pk_increment]), range(MIN ; MAX)always true      |
++------------------------------------------------------------------------+
+26 rows in set
 ```
