--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/28.random-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/28.random-of-mysql-mode.md
@@ -20,7 +20,7 @@ RANDDOM(seed)
 ```shell
 obclient> SELECT RANDOM(4) FROM TABLE(GENERATOR(3));
 +---------------------+
-| random(4)           |
+| RANDOM(4)           |
 +---------------------+
 | 5267436225003336391 |
 | -851690886662571060 |
@@ -34,12 +34,12 @@ obclient> SELECT RANDOM(4) FROM TABLE(GENERATOR(3));
 ```shell
 obclient> SELECT UNIFORM(1, 100, RANDOM()) FROM TABLE(GENERATOR(4));
 +---------------------------+
-| uniform(1, 100, random()) |
+| UNIFORM(1, 100, RANDOM()) |
 +---------------------------+
-|                       100 |
-|                        61 |
-|                        70 |
-|                        30 |
+|                        66 |
+|                        71 |
+|                        52 |
+|                        14 |
 +---------------------------+
 4 rows in set 
 ```
@@ -59,9 +59,9 @@ obclient> SELECT * FROM t1;
 +------+
 5 rows in set 
 
-obclient> SELECT t1.c1, RAND(t1.c1), RANDDOM(t1.c1) FROM TABLE(GENERATOR(1)), t1;
+obclient> SELECT t1.c1, RAND(t1.c1), RANDOM(t1.c1) FROM TABLE(GENERATOR(1)), t1;
 +------+---------------------+----------------------+
-| c1   | rand(t1.c1)         | random(t1.c1)        |
+| c1   | RAND(t1.c1)         | RANDOM(t1.c1)        |
 +------+---------------------+----------------------+
 |    3 |  0.9057697559760601 |  1084041170817055659 |
 |    4 | 0.15595286540310166 |  5267436225003336391 |
