--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/29.randstr-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/29.randstr-of-oracle-mode.md
@@ -51,33 +51,12 @@ obclient> SELECT RANDSTR(10, RANDOM()) FROM TABLE(GENERATOR(7));
 7 rows in set 
 ```
 
-`RANDSTR()` 通过 `gen` 参数可以控制生成的随机字符串的频率。如下示例中，生成 1000 个长度为 1 的字符串，它们的分布符合 zipf 分布规律。
-
-```shell
-obclient> SELECT RANDSTR(1, ZIPF(1, 10, RANDOM())) s, COUNT(*) FROM TABLE(GENERATOR(1000)) GROUP BY s ORDER BY 1 ASC;
-+------+----------+
-| s    | count(*) |
-+------+----------+
-| A    |      331 |
-| B    |      173 |
-| C    |      119 |
-| D    |       88 |
-| E    |       74 |
-| F    |       60 |
-| G    |       50 |
-| H    |       44 |
-| I    |       30 |
-| J    |       31 |
-+------+----------+
-10 rows in set 
-```
-
 `RANDSTR()` 函数通过控制 `N` 参数的大小，可以生成长度不同的字符串，如下例所示。
 
 ```shell
 obclient> SELECT RANDSTR(5, 40) FROM DUAL;
 +----------------+
-| randstr(5, 40) |
+| RANDSTR(5, 40) |
 +----------------+
 | UU3g0          |
 +----------------+
@@ -85,7 +64,7 @@ obclient> SELECT RANDSTR(5, 40) FROM DUAL;
 
 obclient> SELECT RANDSTR(1, 40) FROM DUAL;
 +----------------+
-| randstr(1, 40) |
+| RANDSTR(1, 40) |
 +----------------+
 | U              |
 +----------------+
@@ -93,7 +72,7 @@ obclient> SELECT RANDSTR(1, 40) FROM DUAL;
 
 obclient> SELECT RANDSTR(0, 40) FROM DUAL;
 +----------------+
-| randstr(0, 40) |
+| RANDSTR(0, 40) |
 +----------------+
 |                |
 +----------------+
@@ -101,7 +80,7 @@ obclient> SELECT RANDSTR(0, 40) FROM DUAL;
 
 obclient> SELECT RANDSTR(-1, 40) FROM DUAL;
 +-----------------+
-| randstr(-1, 40) |
+| RANDSTR(-1, 40) |
 +-----------------+
 | NULL            |
 +-----------------+
@@ -113,7 +92,7 @@ obclient> SELECT RANDSTR(-1, 40) FROM DUAL;
 ```shell
 obclient> SELECT RANDSTR(10, 1442) FROM TABLE(GENERATOR(7));
 +-------------------+
-| randstr(10, 1442) |
+| RANDSTR(10, 1442) |
 +-------------------+
 | 4dTm5bOtGc        |
 | 4dTm5bOtGc        |
@@ -127,7 +106,7 @@ obclient> SELECT RANDSTR(10, 1442) FROM TABLE(GENERATOR(7));
 
 obclient> SELECT RANDSTR(10, 1442) FROM TABLE(GENERATOR(7));
 +-------------------+
-| randstr(10, 1442) |
+| RANDSTR(10, 1442) |
 +-------------------+
 | 4dTm5bOtGc        |
 | 4dTm5bOtGc        |
