--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/12.generator-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/12.generator-of-oracle-mode.md
@@ -68,7 +68,7 @@ Records: 2  Duplicates: 0  Warnings: 0
 
 obclient> SELECT c1, RANDOM(1) FROM t1, TABLE(GENERATOR(3));
 +------+----------------------+
-| c1   | random(1)            |
+| c1   | RANDOM(1)            |
 +------+----------------------+
 |    1 | -6753783847308464280 |
 |    2 | -6707106347154343346 |
