--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/28.random-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/28.random-of-oracle-mode.md
@@ -61,7 +61,7 @@ obclient> SELECT * FROM t1;
 
 obclient> SELECT t1.c1, RANDOM(t1.c1) FROM TABLE(GENERATOR(1)), t1;
 +------+----------------------+
-| c1   | random(t1.c1)        |
+| c1   | RANDOM(t1.c1)        |
 +------+----------------------+
 |    3 | 1084041170817055659  |
 |    4 | 5267436225003336391  |
