--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
@@ -77,9 +77,9 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
      ALTER SYSTEM RUN JOB "io_calibration" SERVER = 'xx.xx.xx.1:2882';
      ```
 
-3. 查看磁盘 IO 校准状态。
+3. 查看磁盘 I/O 校准状态。
 
-   触发磁盘校准任务后，您可以通过 `GV$OB_IO_CALIBRATION_STATUS` 或 `V$OB_IO_CALIBRATION_STATUS` 视图确认 IO 校准状态。
+   触发磁盘校准任务后，您可以通过 `GV$OB_IO_CALIBRATION_STATUS` 或 `V$OB_IO_CALIBRATION_STATUS` 视图确认 I/O 校准状态。
 
    ```sql
    SELECT * FROM oceanbase.V$OB_IO_CALIBRATION_STATUS;
@@ -96,13 +96,13 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    1 row in set
    ```
 
-   磁盘 IO 校准状态分为以下几种：
+   磁盘 I/O 校准状态分为以下几种：
 
-   * `NOT AVAILABLE`：表示 IO 校准无法使用。
-   * `IN PROGRESS`：表示正在进行 IO 校准。
-   * `READY`：表示 IO 校准已完成。
+   * `NOT AVAILABLE`：表示 I/O 校准功能无法使用。
+   * `IN PROGRESS`：表示正在进行 I/O 校准。
+   * `READY`：表示 I/O 校准已完成。
    
-   从查询结果可知，`STATUS` 字段的值为 `IN PROGRESS`，表示正在进行磁盘 IO 校准。待磁盘 IO 校准完成后，`STATUS` 字段的值会变成 `READY`，表示磁盘校准已完成，同时 `FINISH_TIME` 字段中会显示完成时间。
+   从查询结果可知，`STATUS` 字段的值为 `IN PROGRESS`，表示正在进行磁盘 I/O 校准。待磁盘 I/O 校准完成后，`STATUS` 字段的值会变成 `READY`，表示磁盘校准已完成，同时 `FINISH_TIME` 字段中会显示完成时间。
 
    ```shell
    +----------------+----------+--------------+--------+----------------------------+----------------------------+
@@ -113,9 +113,9 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    1 row in set
    ```
 
-4. 确认磁盘 IO 校准是否生效。
+4. 确认磁盘 I/O 校准是否生效。
 
-   待磁盘 IO 校准完成后，您可以通过 `GV$OB_IO_BENCHMARK` 或 `V$OB_IO_BENCHMARK` 视图确认磁盘 IO 校准是否生效。
+   待磁盘 I/O 校准完成后，您可以通过 `GV$OB_IO_BENCHMARK` 或 `V$OB_IO_BENCHMARK` 视图确认磁盘 I/O 校准是否生效。
 
    ```sql
    SELECT * FROM oceanbase.GV$OB_IO_BENCHMARK;
@@ -151,14 +151,19 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    20 rows in set
    ```
 
+   相关字段的说明信息如下：
+
+   * `STORAGE_NAME`：表示存储名称。`DATA` 表示数据盘； `REDO` 表示日志盘。
+   * `MODE`：表示 I/O 模式为读或者写。
+   * `SIZE`：表示 I/O 的数据量，单位为字节。
+   * `IOPS`：表示每秒钟完成 I/O 请求的数量。
+   * `MBPS`：表示磁盘带宽，单位为 MB/s。
+   * `LATENCY`：表示磁盘响应时间，单位为 us。
+
+
 ## 手动校准
 
 如果当前 OceanBase 集群有负载，您可以通过主动刷新磁盘校准信息的方式手动对磁盘性能进行校准。
-
-<main id="notice" type='explain'>
-<h4>说明</h4>
-<p>如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
-</main>
 
 1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
@@ -187,10 +192,15 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
      * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
 
+       <main id="notice" type='explain'>
+       <h4>说明</h4>
+       <p>指定磁盘校准信息时，如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
+       </main>
+
        * `mode`：指定读还是写性能，支持 `r`、 `w`、`read` 或 `write`。
        * `size`：指定数据量，默认为字节，即如果指定的值为纯数字，则其单位默认为字节。同时支持指定带单位的数值，包括 K、KB、M、MB、G、GB。
-       * `latency`：指定 RT（Response Time）的值，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
-       * `iops`：指定 IOPS 的值，单位为 1。
+       * `latency`：指定磁盘响应时间，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
+       * `iops`：指定每秒钟完成 I/O 请求的数量，单位为 1。
 
      对集群内所有 OBServer 节点的数据盘从内部表刷新一次磁盘性能信息的示例如下：
 
@@ -212,7 +222,7 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
      清除集群内所有 OBServer 节点数据盘的磁盘性能信息的示例如下：
 
      ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION CALIBRATION_INFO = ();
+     ALTER SYSTEM REFRESH IO CALIBRATION CALIBRATION_INFO = ("");
      ```
 
    * 对指定 Zone 内的所有 OBServer 节点刷新一次磁盘校准信息
@@ -232,10 +242,15 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
      * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
 
+       <main id="notice" type='explain'>
+       <h4>说明</h4>
+       <p>指定磁盘校准信息时，如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
+       </main>
+
        * `mode`：指定读还是写性能，支持 `r`、 `w`、`read` 或 `write`。
        * `size`：指定数据量，默认为字节，即如果指定的值为纯数字，则其单位默认为字节。同时支持指定带单位的数值，包括 K、KB、M、MB、G、GB。
-       * `latency`：指定 RT（Response Time）的值，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
-       * `iops`：指定 IOPS 的值，单位为 1。
+       * `latency`：指定磁盘响应时间，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
+       * `iops`：指定每秒钟完成 I/O 请求的数量，单位为 1。
 
      * `zone_name`：指定待刷新磁盘校准信息的 Zone。当前仅支持指定一个 Zone。
 
@@ -264,10 +279,15 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
      * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
 
-       * `mode`：指定读还是写性能，支持 `r`、 `w`、`read` 或 `write`。
-       * `size`：指定数据量，默认为字节，即如果指定的值为纯数字，则其单位默认为字节。同时支持指定带单位的数值，包括 K、KB、M、MB、G、GB。
-       * `latency`：指定 RT（Response Time）的值，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
-       * `iops`：指定 IOPS 的值，单位为 1。
+       <main id="notice" type='explain'>
+       <h4>说明</h4>
+       <p>指定磁盘校准信息时，如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
+       </main>
+
+       * `mode`：指定 I/O 模式，支持 `r`、 `w`、`read` 或 `write`。
+       * `size`：指定 I/O 数据量，默认为字节，即如果指定的值为纯数字，则其单位默认为字节。同时支持指定带单位的数值，包括 K、KB、M、MB、G、GB。
+       * `latency`：指定磁盘响应时间，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
+       * `iops`：指定每秒钟完成 I/O 请求的数量，单位为 1。
 
      * `svr_ip`：指定待刷新磁盘校准信息的 OBServer 节点的 IP。
      * `svr_port`：指定待刷新磁盘校准信息的 OBServer 节点的 RPC 端口。
@@ -278,9 +298,9 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
      ALTER SYSTEM REFRESH IO CALIBRATION STORAGE = 'DATA' CALIBRATION_INFO = ("read:4K:100us:200000","write:2M:5ms:1500") SERVER = 'xx.xx.xx.1:2882';
      ```
 
-3. 查看磁盘 IO 校准状态。
+3. 查看磁盘 I/O 校准状态。
 
-   主动刷新磁盘信息后，您可以通过 `GV$OB_IO_CALIBRATION_STATUS` 或 `V$OB_IO_CALIBRATION_STATUS` 视图确认 IO 校准状态。
+   主动刷新磁盘信息后，您可以通过 `GV$OB_IO_CALIBRATION_STATUS` 或 `V$OB_IO_CALIBRATION_STATUS` 视图确认 I/O 校准状态。
 
    ```sql
    SELECT * FROM oceanbase.V$OB_IO_CALIBRATION_STATUS;
@@ -297,13 +317,13 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    1 row in set
    ```
 
-   磁盘 IO 校准状态分为以下几种：
+   磁盘 I/O 校准状态分为以下几种：
 
-   * `NOT AVAILABLE`：表示 IO 校准无法使用。
-   * `IN PROGRESS`：表示正在进行 IO 校准。
-   * `READY`：表示 IO 校准已完成。
+   * `NOT AVAILABLE`：表示 I/O 校准功能无法使用。
+   * `IN PROGRESS`：表示正在进行 I/O 校准。
+   * `READY`：表示 I/O 校准已完成。
    
-   从查询结果可知，`STATUS` 字段的值为 `IN PROGRESS`，表示正在进行磁盘 IO 校准。待磁盘 IO 校准完成后，`STATUS` 字段的值会变成 `READY`，表示磁盘校准已完成，同时 `FINISH_TIME` 字段中会显示完成时间。
+   从查询结果可知，`STATUS` 字段的值为 `IN PROGRESS`，表示正在进行磁盘 I/O 校准。待磁盘 I/O 校准完成后，`STATUS` 字段的值会变成 `READY`，表示磁盘校准已完成，同时 `FINISH_TIME` 字段中会显示完成时间。
 
    ```shell
    +----------------+----------+--------------+--------+----------------------------+----------------------------+
@@ -314,9 +334,9 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    1 row in set
    ```
 
-4. 确认磁盘 IO 校准是否生效。
+4. 确认磁盘 I/O 校准是否生效。
 
-   待磁盘校准信息刷新完成后，您可以通过 `GV$OB_IO_BENCHMARK` 或 `V$OB_IO_BENCHMARK` 视图确认磁盘 IO 校准是否生效。
+   待磁盘校准信息刷新完成后，您可以通过 `GV$OB_IO_BENCHMARK` 或 `V$OB_IO_BENCHMARK` 视图确认磁盘 I/O 校准是否生效。
 
    ```sql
    SELECT * FROM oceanbase.GV$OB_IO_BENCHMARK;
@@ -332,3 +352,12 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    +----------------+----------+--------------+-------+---------+--------+------+---------+
    1 rows in set
    ```
+
+   相关字段的说明信息如下：
+
+   * `STORAGE_NAME`：表示存储名称。`DATA` 表示数据盘； `REDO` 表示日志盘。
+   * `MODE`：表示 I/O 模式为读或者写。
+   * `SIZE`：表示 I/O 的数据量，单位为字节。
+   * `IOPS`：表示每秒钟完成 I/O 请求的数量。
+   * `MBPS`：表示磁盘带宽，单位为 MB/s。
+   * `LATENCY`：表示磁盘响应时间，单位为 us。
